# valeriepieris

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/: valeriepieris.pyx
tests/: test.py
