[metadata]
name = valeriepieris
version = 0.1.1
description = Finding valeriepieris circles
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GENERAL PUBLIC LICENSE Version 3
author = Rudy Arthur
author_email = rudy.d.arthur@gmail.com
url = https://github.com/rudyarthur/valeriepieris
download_urls = https://github.com/rudyarthur/valeriepieris
project_urls =
	Documentation = https://github.com/rudyarthur/valeriepieris
	Code = https://github.com/rudyarthur/valeriepieris
	Issue tracker = https://github.com/rudyarthur/valeriepieris/issues
classifiers =
	Development Status :: 1 - Planning
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Mathematics
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: C
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
python_requires = >=3.8
package_dir = =src
packages = find:

[options.packages.find]
where = src

[options.package_data]
* = *.pxd
